<project
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion> 
	<parent>
	  <groupId>org.jboss.tools.teiid</groupId>
	  <artifactId>test-aggregate</artifactId>
	  <version>0.0.4-SNAPSHOT</version>
	</parent>
	<groupId>org.jboss.tools</groupId>
	<artifactId>org.teiid.designer.aggregate.test</artifactId> 
	<version>10.0.0-SNAPSHOT</version>
	<packaging>eclipse-test-plugin</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <configuration>
                    <dependency-resolution>
                        <extraRequirements>
                            <requirement>
                                <type>eclipse-feature</type>
                                <id>org.teiid.designer.test.feature</id>
                                <versionRange>0.0.0</versionRange>
                            </requirement>
                        </extraRequirements>
                    </dependency-resolution>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <!-- Sets the memory configuration and disables jbosstools usage reporting -->
                    <argLine>-Xmx1024m -XX:MaxPermSize=512m -Dusage_reporting_enabled=false</argLine>
                    <systemProperties>
                        <property>
                            <name>usage_reporting_enabled</name>
                            <value>false</value>
                        </property>
                    </systemProperties>
                    <showEclipseLog>true</showEclipseLog>
                    <dependencies>
                        <dependency>
                            <type>eclipse-feature</type>
                            <artifactId>org.teiid.designer.test.feature</artifactId>
                            <version>0.0.0</version>
                        </dependency>
                    </dependencies>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
